# dioxus-iconify

./: .clippy.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  mise.toml
.github/workflows/: release.yml
examples/demo-app/: Cargo.toml  README.md
examples/demo-app/src/: main.rs
examples/demo-app/src/icons/: app.rs  heroicons.rs  mdi.rs  mod.rs
src/: api.rs  generator.rs  lib.rs  main.rs  naming.rs  svg.rs
tests/: cli_integration.rs  generated_code_compiles.rs
