[package]
name = "dioxus-iconify"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "CLI tool for generating Iconify icons in Dioxus projects"
repository = "https://github.com/cdviz-dev/dioxus-iconify"
keywords = ["dioxus", "iconify", "icons", "cli", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "dioxus_iconify"
path = "src/lib.rs"

[[bin]]
name = "dioxus-iconify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
indoc = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.24"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
