[package]
name = "dioxus-iconify"
version = "0.2.3"
edition = "2024"
license = "CC0-1.0"
description = "CLI tool for vendoring [Iconify](https://icon-sets.iconify.design/) icons (material, lucid, heroicons,....) in Dioxus projects"
repository = "https://github.com/davidB/dioxus-iconify"
keywords = ["dioxus", "iconify", "icons", "cli", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "dioxus_iconify"
path = "src/lib.rs"

[[bin]]
name = "dioxus-iconify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
indoc = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt",     # The rt feature provides a lightweight single-threaded runtime which is perfect for CLI tools
  "macros",
] }

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
